mdapi/objects/User_Guide__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Sections for Product Documentation, User Guides, Glossary, ReadMe</description>
    <fields>
        <fullName>ArticleBody__c</fullName>
        <description>Main body of information in the article</description>
        <label>-</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Community_URL__c</fullName>
        <description>Formula field which reflects the correct URL structure needed for community navigation</description>
        <formula>&quot;https://support.storagecraft.com/s/article/&quot;&amp;UrlName</formula>
        <label>Community URL src=</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guide__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Custom Guide Object</description>
        <label>Guide Name</label>
        <referenceTo>Guide__c</referenceTo>
        <relationshipLabel>Guide Sections</relationshipLabel>
        <relationshipName>User_Guides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this box is checked the article will be displayed on the user guide landing page</description>
        <inlineHelpText>When this box is checked the article will be displayed as the main link in the user guide list.  The name of this article should be the name of the user guide.</inlineHelpText>
        <label>Landing Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <formula>HYPERLINK(&quot;/s/article/&quot;&amp;Id&amp;&quot;/&quot;&amp;UrlName,Title,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>Section Number (examples:  1, 2.4, 3.2.2,  lead with 0 for preface sections)</description>
        <label>Section</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>User Guide</label>
    <pluralLabel>User Guides</pluralLabel>
    <validationRules>
        <fullName>Section_should_be_populated</fullName>
        <active>true</active>
        <description>Make sure the section field is populated if the article is part of a guide</description>
        <errorConditionFormula>AND(
LEN(Section__c) = 0,
LEN(Guide__c) &gt; 0
)</errorConditionFormula>
        <errorMessage>Please put a number in the section field.  This field will determine where this article is displayed in the guide sections list.  Use 0 for Title / 1st page articles.  Sub-sections of the tree, example:  1.2 for 2nd article under section 1.</errorMessage>
    </validationRules>
</CustomObject>